# lelwel

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  update_grammar.sh
.github/workflows/: rust.yml
examples/brainfuck/: Cargo.toml  README.md  build.rs  generated.rs
examples/brainfuck/src/: brainfuck.llw  lexer.rs  lib.rs  main.rs  parser.rs
examples/brainfuck/tests/: test.rs
examples/brainfuck/tests/data/: incomplete.bf  incomplete.diag  incomplete.tree
examples/c/: Cargo.toml  README.md  build.rs
examples/c/src/: ast.rs  c.llw  lexer.rs  lib.rs  main.rs  parser.rs
examples/c/tests/: test.rs
examples/c/tests/data/: incomplete.c  incomplete.diag  incomplete.tree  incomplete_call.c  incomplete_call.diag  incomplete_call.tree
examples/calc/: .gitignore  Cargo.toml  README.md  build.rs
examples/calc/src/: calc.llw  lexer.rs  main.rs  parser.rs
examples/calc/src/lexer/: imp.rs
examples/json/: .gitignore  Cargo.toml  README.md  build.rs
examples/json/src/: json.llw  lexer.rs  lib.rs  main.rs  parser.rs
examples/json/src/diag/: imp.rs
examples/json/src/lexer/: imp.rs
examples/json/tests/: test.rs
examples/json/tests/data/: escape.diag  escape.json  escape.tree  incomplete.diag  incomplete.json  incomplete.tree  wrong_key.diag  wrong_key.json  wrong_key.tree
examples/l/: Cargo.toml  README.md
examples/l/src/: l.llw  lexer.rs  lib.rs  main.rs  parser.rs
examples/l/tests/: test.rs
examples/l/tests/data/: incomplete.diag  incomplete.l  incomplete.tree  missing_arrow.diag  missing_arrow.l  missing_arrow.tree
examples/lua/: Cargo.toml  README.md  build.rs
examples/lua/src/: ast.rs  lexer.rs  lib.rs  lua.llw  main.rs  parser.rs
examples/lua/tests/: test.rs
examples/lua/tests/data/: incomplete.diag  incomplete.lua  incomplete.tree
examples/oberon0/: Cargo.toml  README.md  build.rs
examples/oberon0/src/: lexer.rs  lib.rs  main.rs  oberon0.llw  parser.rs
examples/oberon0/tests/: test.rs
examples/pl0/: Cargo.toml  README.md  build.rs
examples/pl0/src/: main.rs  parser.rs  pl0.llw
examples/python2/: Cargo.toml  README.md  build.rs
examples/python2/src/: lexer.rs  main.rs  parser.rs  python.llw
examples/python2/tests/: test.rs
examples/toml/: Cargo.toml  README.md  build.rs
examples/toml/src/: lexer.rs  main.rs  parser.rs  toml.llw
examples/toml/tests/: test.rs
examples/toml/tests/data/: incomplete.diag  (+2 more)
examples/wgsl/: Cargo.toml  README.md  build.rs
examples/wgsl/src/: lexer.rs  lib.rs  main.rs  parser.rs  wgsl.llw
examples/wgsl/tests/: test.rs
examples/wgsl/tests/data/: incomplete.diag  incomplete.tree  incomplete.wgsl  incomplete_if.diag  incomplete_if.tree  incomplete_if.wgsl  incomplete_let.diag  incomplete_let.tree  incomplete_let.wgsl  invalid_for.diag  invalid_for.tree  invalid_for.wgsl  missing_arrow.diag  missing_arrow.tree  missing_arrow.wgsl  missing_comma.diag  missing_comma.tree  missing_comma.wgsl  missing_semicolon.diag  missing_semicolon.tree  missing_semicolon.wgsl  template.tree  template.wgsl
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
scripts/: .gitignore  build_wasm_examples.sh  format_grammars.sh  update_grammar.sh
src/: lib.rs
src/backend/: format.rs  graphviz.rs  mod.rs  parser_template.rs  rust.rs
src/frontend/: ast.rs  diag.rs  generated.rs  lelwel.llw  lexer.rs  mod.rs  parser.rs  printer.rs  sema.rs  symbols.rs  token.rs
src/frontend/ast/: imp.rs  mod.rs
src/frontend/diag/: imp.rs  mod.rs
src/frontend/lexer/: imp.rs  mod.rs
src/frontend/symbol/: imp.rs  mod.rs
src/ide/: completion.rs  hover.rs  lookup.rs  mod.rs
src/skeleton/: generated.rs  lexer.rs  parser.rs
tests/: frontend.rs  generate.sh
tests/frontend/: action_ordered_choice.llw  c.llw  calc.llw  empty_paren.llw  error_syntax.llw  expected_action.llw  expected_error_handler.llw  expected_predicate.llw  invalid_lang.llw  invalid_node_create.llw  invalid_token.llw  json.llw  l.llw  left_rec_elision.llw  left_rec_node_create.llw  left_rec_predicate.llw  left_recursive.llw  lelwel.llw  ll1_conflict.llw  lowercase_token.llw  lua.llw  mixing_assoc.llw  multiple_start.llw  node_rename.llw  oberon0.llw  ordered_choice.llw  predef_token.llw  predicate_position.llw  recursion_depth.llw  redef_node_marker.llw  redef_part.llw  redefinition.llw  redundant_elision.llw  return_start.llw  start_as_part.llw  start_elision.llw  syntax_error.llw  top_level_ident.llw  undef_node_create.llw  undefined.llw  (+8 more)
(+6 files in other folders)
