[package]
name = "lelwel"
version = "0.10.1"
description = "Resilient LL(1) parser generator"
repository = "https://github.com/0x2a-42/lelwel"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2024"
keywords = ["parser", "generator", "LL", "grammar"]
categories = ["parsing"]

[lints.rust]
rust-2018-idioms = { level = "deny" }

[dependencies]
logos = "0.16"
codespan-reporting = "0.13"
rustc-hash = "2.1"
codespan-lsp = { version = "0.13", optional = true }
clap = { version = "4.5", features = ["cargo"], optional = true }
lsp-types = { version = "0.95", optional = true }
lsp-types_old = { package = "lsp-types", version = "0.91", optional = true }
lsp-server = { version = "0.7", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
dprint-core = { version = "0.67", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
cli = ["clap", "dprint-core"]
lsp = ["lsp-server", "codespan-lsp", "lsp-types", "lsp-types_old", "serde", "serde_json", "dprint-core"]
wasm = ["wasm-bindgen"]

[[bin]]
name = "llw"
required-features = ["cli"]

[[bin]]
name = "lelwel-ls"
required-features = ["lsp"]

[lib]
crate-type = ["lib", "cdylib"]

[workspace]
members = [
    "examples/c",
    "examples/calc",
    "examples/json",
    "examples/l",
    "examples/lua",
    "examples/oberon0",
    "examples/python2",
    "examples/toml",
    "examples/wgsl",
    "examples/brainfuck"
]
