[package]
name = "lelwel-wgsl"
version = "0.0.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
logos = "0.16"
codespan-reporting = "0.13"
wasm-bindgen = "0.2"
rustc-hash = "2.1"

[build-dependencies]
lelwel = { path = "../.." }
